--- a/package.json
+++ b/package.json
@@ -1,14 +1,76 @@
 {
   "name": "@voiceflow/logger",
+  "description": "Common logger for Voiceflow backend microservices",
   "version": "0.1.0",
-  "description": "A logging utility package for standardized logging across Voiceflow backend microservices",
-  "main": "index.js",
-  "repository": "https://github.com/voiceflow/logger",
-  "author": "Frank Gu",
-  "license": "MIT",
-  "private": true,
+  "author": "Frank Gu <frank@voiceflow.com>",
   "dependencies": {
     "express-pino-logger": "^4.0.0",
     "pino": "^5.14.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "@voiceflow/commitlint-config": "^1.0.1",
+    "@voiceflow/eslint-config": "^2.0.4",
+    "@voiceflow/git-branch-check": "^1.0.2",
+    "@voiceflow/prettier-config": "^1.0.4",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "codacy-coverage": "^3.4.0",
+    "commitizen": "^3.1.1",
+    "cz-conventional-changelog": "2.1.0",
+    "eslint": "^6.0.1",
+    "fixpack": "^2.3.1",
+    "husky": "^3.0.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
+    "prettier-eslint-cli": "^5.0.0",
+    "prettier-stylelint": "^0.4.2",
+    "pretty-quick": "^1.11.1",
+    "semantic-release": "^15.13.18",
+    "sinon": "^7.3.2"
+  },
+  "files": [
+    "lib/**/*",
+    "*.js"
+  ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged",
+      "pre-push": "git-branch-check"
+    }
+  },
+  "license": "ISC",
+  "lint-staged": {
+    "package.json": [
+      "fixpack",
+      "git add"
+    ],
+    "**/*.js": [
+      "eslint --fix",
+      "prettier-eslint --write",
+      "git add"
+    ]
+  },
+  "main": "index.js",
+  "prettier": "@voiceflow/prettier-config",
+  "release": {
+    "branch": "production"
+  },
+  "repository": "git@github.com:voiceflow/logger.git",
+  "scripts": {
+    "commit": "git-cz",
+    "integration": "mocha --use_strict --exit \"tests/**/*.it.js\"",
+    "lint": "eslint \"**/*.js\" --fix",
+    "lint:quiet": "yarn lint -- --quiet",
+    "prepare": "fixpack",
+    "send-coverage": "cat ./coverage/lcov.info | codacy-coverage",
+    "test": "nyc mocha --use_strict --exit \"tests/**/*.unit.js\" \"tests/**/*.it.js\" && yarn lint",
+    "unit": "mocha --use_strict --exit \"tests/**/*.unit.js\"",
+    "update": "yarn install"
   }
 }
