--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@voiceflow/logger",
   "description": "Common logger for Voiceflow backend microservices",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": "Frank Gu <frank@voiceflow.com>",
   "dependencies": {
+    "@voiceflow/pino-pretty": "^3.5.0",
     "express-pino-logger": "^4.0.0",
     "pino": "^5.14.0"
   },
