--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.1",
   "author": "Frank Gu <frank@voiceflow.com>",
   "dependencies": {
+    "@types/chai": "^4.2.11",
     "@voiceflow/pino-pretty": "^3.5.0",
     "express-pino-logger": "^4.0.0",
     "pino": "^5.14.0"
@@ -11,6 +12,11 @@
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
+    "@types/express-pino-logger": "^4.0.2",
+    "@types/mocha": "^8.0.0",
+    "@types/pino": "^6.3.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "@voiceflow/commitlint-config": "^1.0.1",
     "@voiceflow/eslint-config": "^2.0.4",
     "@voiceflow/git-branch-check": "^1.0.2",
@@ -20,7 +26,9 @@
     "codacy-coverage": "^3.4.0",
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "2.1.0",
-    "eslint": "^6.0.1",
+    "eslint": "^6.7.2",
+    "eslint-plugin-mocha": "^6.2.2",
+    "eslint-plugin-simple-import-sort": "^5.0.0",
     "fixpack": "^2.3.1",
     "husky": "^3.0.0",
     "jest": "^24.8.0",
@@ -32,7 +40,11 @@
     "prettier-stylelint": "^0.4.2",
     "pretty-quick": "^1.11.1",
     "semantic-release": "^15.13.18",
-    "sinon": "^7.3.2"
+    "sinon": "^7.3.2",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^8.10.2",
+    "ttypescript": "^1.5.10",
+    "typescript": "^3.9.6"
   },
   "files": [
     "lib/**/*",
@@ -47,13 +59,13 @@
   },
   "license": "ISC",
   "lint-staged": {
-    "package.json": [
-      "fixpack",
-      "git add"
-    ],
-    "**/*.js": [
+    "**/*.{js,ts}": [
       "eslint --fix",
       "prettier-eslint --write",
+      "git add"
+    ],
+    "package.json": [
+      "fixpack",
       "git add"
     ]
   },
@@ -66,12 +78,11 @@
   "scripts": {
     "commit": "git-cz",
     "integration": "mocha --use_strict --exit \"tests/**/*.it.js\"",
-    "lint": "eslint \"**/*.js\" --fix",
+    "lint": "eslint \"./**/*.{js,ts}\" --fix",
     "lint:quiet": "yarn lint -- --quiet",
     "prepare": "fixpack",
     "send-coverage": "cat ./coverage/lcov.info | codacy-coverage",
-    "test": "nyc mocha --use_strict --exit \"tests/**/*.unit.js\" \"tests/**/*.it.js\"",
-    "unit": "mocha --use_strict --exit \"tests/**/*.unit.js\"",
-    "update": "yarn install"
+    "test": "NODE_ENV=test nyc ts-mocha --paths --opts mocha.opts",
+    "unit": "mocha --use_strict --exit \"tests/**/*.unit.js\""
   }
 }
