fix: package versions

--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "version": "1.0.1",
   "author": "Frank Gu <frank@voiceflow.com>",
   "dependencies": {
-    "@types/chai": "^4.2.11",
+    "@types/express-pino-logger": "^4.0.2",
+    "@types/pino": "^6.3.0",
     "@voiceflow/pino-pretty": "^3.5.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "express-pino-logger": "^4.0.0",
     "pino": "^5.14.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
     "@commitlint/config-conventional": "^8.0.0",
-    "@types/express-pino-logger": "^4.0.2",
+    "@types/chai": "^4.2.11",
     "@types/mocha": "^8.0.0",
-    "@types/pino": "^6.3.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "@voiceflow/commitlint-config": "^1.0.1",
     "@voiceflow/eslint-config": "^2.0.4",
     "@voiceflow/git-branch-check": "^1.0.2",
     "@voiceflow/prettier-config": "^1.0.4",
-    "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "codacy-coverage": "^3.4.0",
@@ -74,7 +74,7 @@
   "prettier": "@voiceflow/prettier-config",
   "repository": "git@github.com:voiceflow/logger.git",
   "scripts": {
-    "build": "npm run clean && ttsc --project ./tsconfig.build.json",
+    "build": "yarn clean && ttsc --project ./tsconfig.build.json",
     "clean": "rimraf build",
     "commit": "git-cz",
     "integration": "mocha --use_strict --exit \"tests/**/*.it.js\"",
