--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@types/pino": "^6.3.0",
     "@voiceflow/pino-pretty": "^3.5.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "express-pino-logger": "^4.0.0",
-    "pino": "^5.14.0"
+    "pino": "^5.14.0",
+    "pino-http": "^5.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.0.0",
