--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "prepare": "yarn build",
     "test": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts tests/**/*.{unit,it}.{ts,js}",
     "test:integration": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts tests/**/*.it.{ts,js}",
+    "test:unit": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts tests/**/*.it.{ts,js}",
     "test:single": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts"
   }
 }
