--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,8 @@ version: 2.1
 
 orbs:
   codecov: codecov/codecov@1.0.2
-  vfcommon: voiceflow/common@0.0.52
+  vfcommon: voiceflow/common@0.0.54
+  validate-title: qventus/validate-title@0.0.4
 
 jobs:
   build-and-test:
@@ -18,6 +19,20 @@ jobs:
           flags: integration
 
 workflows:
+
+  pr-checker:
+    jobs:
+      - validate-title/validate:
+          context: dev-test
+          regex: >-
+            $PR_REGEX
+          filters:
+            branches:
+              ignore:
+                - /env-.*/
+                - staging
+                - master
+
   test-and-release:
     jobs:
       - build-and-test
