--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "6.3.4",
-    "@voiceflow/pino-pretty": "4.3.0",
+    "@voiceflow/pino": "6.11.0",
+    "@voiceflow/pino-pretty": "4.4.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "pino": "6.8.0",
     "pino-http": "5.3.0"
   },
   "devDependencies": {
