--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "description": "Common logger for Voiceflow backend microservices",
   "version": "1.0.1",
   "author": "Frank Gu <frank@voiceflow.com>",
+  "bugs": {
+    "url": "https://github.com/voiceflow/logger/issues"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
   "dependencies": {
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "6.3.4",
@@ -12,8 +20,8 @@
     "pino-http": "5.3.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
@@ -23,62 +31,41 @@
     "@voiceflow/git-branch-check": "^1.1.3",
     "@voiceflow/prettier-config": "^1.0.5",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "codacy-coverage": "^3.4.0",
-    "commitizen": "^3.1.1",
-    "cz-conventional-changelog": "2.1.0",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "3.3.0",
+    "depcheck": "^1.3.1",
     "eslint": "^6.7.2",
-    "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-simple-import-sort": "^5.0.0",
-    "fixpack": "^2.3.1",
-    "husky": "^3.0.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^9.2.0",
+    "fixpack": "^4.0.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.3",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "prettier": "^1.18.2",
     "prettier-eslint-cli": "^5.0.0",
-    "prettier-stylelint": "^0.4.2",
-    "pretty-quick": "^1.11.1",
-    "semantic-release": "^15.13.18",
-    "sinon": "^7.3.2",
     "ts-mocha": "^7.0.0",
     "ts-node": "^8.10.2",
     "ttypescript": "^1.5.10",
     "typescript": "^3.9.6"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged",
-      "pre-push": "git-branch-check"
-    }
-  },
+  "homepage": "https://github.com/voiceflow/logger#readme",
+  "keywords": [
+    "voiceflow"
+  ],
   "license": "ISC",
-  "lint-staged": {
-    "**/*.{js,ts}": [
-      "eslint --fix",
-      "prettier-eslint --write",
-      "git add"
-    ],
-    "package.json": [
-      "fixpack",
-      "git add"
-    ]
-  },
   "main": "build/index.js",
   "prettier": "@voiceflow/prettier-config",
   "repository": "git@github.com:voiceflow/logger.git",
   "scripts": {
     "build": "yarn clean && ttsc --project ./tsconfig.build.json",
     "clean": "rimraf build",
-    "commit": "git-cz",
+    "commit": "cz",
     "lint": "eslint \"./**/*.{js,ts}\"",
     "lint:fix": "yarn lint --fix",
     "lint:quiet": "yarn lint --quiet",
     "lint:report": "yarn lint --format json -o sonar/report.json",
     "prepare": "yarn build",
     "test": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.{unit,it}.{ts,js}'",
+    "test:dependencies": "depcheck",
     "test:integration": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.it.{ts,js}'",
     "test:single": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts",
     "test:unit": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.it.{ts,js}'"
