--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     }
   },
   "dependencies": {
+    "@types/cls-hooked": "^4.3.1",
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "6.3.4",
     "@voiceflow/pino": "6.11.0",
     "@voiceflow/pino-pretty": "4.4.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
+    "cls-hooked": "^4.2.2",
+    "nanoid": "^3.1.20",
     "pino-http": "5.3.0"
   },
   "devDependencies": {
