--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lint-staged": "^10.5.3",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
+    "pino": "^6.11.0",
     "prettier": "^1.18.2",
     "prettier-eslint-cli": "^5.0.0",
     "ts-mocha": "^7.0.0",
