--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     }
   },
   "dependencies": {
+    "@types/cls-hooked": "^4.3.1",
     "@types/express-pino-logger": "^4.0.2",
     "@types/pino": "6.3.4",
-    "@voiceflow/pino-pretty": "4.3.0",
+    "@voiceflow/pino": "6.11.0",
+    "@voiceflow/pino-pretty": "4.4.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "pino": "6.8.0",
+    "cls-hooked": "^4.2.2",
+    "nanoid": "^3.1.20",
     "pino-http": "5.3.0"
   },
   "devDependencies": {
@@ -40,6 +43,7 @@
     "lint-staged": "^10.5.3",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
+    "pino": "^6.11.0",
     "prettier": "^1.18.2",
     "prettier-eslint-cli": "^5.0.0",
     "ts-mocha": "^7.0.0",
