--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
@@ -42,10 +43,11 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "mocha": "^6.1.4",
-    "nyc": "^14.1.1",
+    "nyc": "^15.1.0",
     "pino": "^6.11.0",
     "prettier": "^1.18.2",
     "prettier-eslint-cli": "^5.0.0",
+    "source-map-support": "^0.5.19",
     "ts-mocha": "^7.0.0",
     "ts-node": "^8.10.2",
     "ttypescript": "^1.5.10",
