--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,13 @@
 version: 2.1
 
+# Reusable YAML chunks
+defaults:
+  autorebase_filters: &autorebase_filters
+    branches:
+      ignore:
+        - /rebase-pull-request-.*/
+        - /cherry-pick-rebase-pull-request-.*/
+
 orbs:
   codecov: codecov/codecov@1.0.2
   vfcommon: voiceflow/common@0.0.67
@@ -23,7 +31,10 @@ workflows:
 
   test-and-release:
     jobs:
-      - build-and-test
+      - build-and-test:
+          filters:
+            <<: *autorebase_filters
+            
       - vfcommon/release:
           requires:
             - build-and-test
