--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "local>voiceflow/renovate-config"
-  ]
+  "extends": ["github>voiceflow/renovate-config:integrations"]
 }
