--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
     "depcheck": "^1.3.1",
-    "eslint": "^6.7.2",
+    "eslint": "^7.32.0",
+    "eslint-output": "^3.0.1",
     "fixpack": "^4.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
@@ -66,10 +67,12 @@
     "build": "yarn clean && ttsc --project ./tsconfig.build.json",
     "clean": "rimraf build",
     "commit": "cz",
+    "eslint-output": "eslint-output",
     "lint": "eslint \"./**/*.{js,ts}\"",
     "lint:fix": "yarn lint --fix",
+    "lint:output": "yarn run eslint-output --quiet \"**/*.{js,ts}\"",
     "lint:quiet": "yarn lint --quiet",
-    "lint:report": "yarn lint --format json -o sonar/report.json",
+    "lint:report": "yarn lint:output",
     "prepare": "yarn build",
     "test": "yarn test:run",
     "test:dependencies": "depcheck",
