--- a/package.json
+++ b/package.json
@@ -12,45 +12,39 @@
     }
   },
   "dependencies": {
-    "@types/cls-hooked": "^4.3.1",
-    "@types/express-pino-logger": "^4.0.2",
-    "@voiceflow/pino": "6.11.2",
-    "@voiceflow/pino-pretty": "4.4.0",
-    "@zerollup/ts-transform-paths": "^1.7.18",
-    "cls-hooked": "^4.2.2",
-    "nanoid": "^3.1.20",
-    "pino-http": "5.3.0"
+    "colorette": "2.0.19",
+    "pino": "8.7.0",
+    "pino-http": "8.2.1",
+    "pino-pretty": "9.1.1",
+    "ts-pattern": "^4.0.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@commitlint/cli": "17.1.2",
+    "@istanbuljs/nyc-config-typescript": "1.0.2",
+    "@types/chai": "4.3.3",
+    "@types/mocha": "9.1.1",
     "@voiceflow/commitlint-config": "2.0.0",
-    "@voiceflow/eslint-config": "6.0.0",
-    "@voiceflow/git-branch-check": "1.2.3",
-    "@voiceflow/prettier-config": "1.0.6",
-    "chai": "^4.2.0",
-    "commitizen": "^4.2.3",
-    "cz-conventional-changelog": "3.3.0",
-    "depcheck": "^1.3.1",
-    "eslint": "^7.32.0",
+    "@voiceflow/eslint-config": "7.0.0",
+    "@voiceflow/git-branch-check": "1.4.0",
+    "@voiceflow/prettier-config": "1.2.1",
+    "@voiceflow/semantic-release-config": "1.1.0",
+    "@voiceflow/tsconfig": "1.4.8",
+    "chai": "4.3.6",
+    "commitizen": "4.2.5",
+    "cz-conventional-changelog": "^3.3.0",
+    "depcheck": "^1.4.3",
+    "eslint": "8.23.1",
     "eslint-output": "^3.0.1",
     "fixpack": "^4.0.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
-    "mocha": "^6.1.4",
+    "husky": "8.0.1",
+    "istanbul": "^0.4.5",
+    "lint-staged": "13.0.3",
+    "mocha": "10.0.0",
     "nyc": "^15.1.0",
-    "prettier": "^1.18.2",
-    "prettier-eslint-cli": "^5.0.0",
-    "source-map-support": "^0.5.19",
-    "ts-mocha": "^7.0.0",
-    "ts-node": "^8.10.2",
-    "ttypescript": "^1.5.10",
-    "typescript": "^3.9.6"
+    "prettier": "2.7.1",
+    "ts-mocha": "10.0.0",
+    "tsc-alias": "1.7.0",
+    "typescript": "4.8.3"
   },
   "files": [
     "build/"
@@ -64,20 +58,19 @@
   "prettier": "@voiceflow/prettier-config",
   "repository": "git@github.com:voiceflow/logger.git",
   "scripts": {
-    "build": "yarn clean && ttsc --project ./tsconfig.build.json",
+    "build": "yarn clean && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "clean": "rimraf build",
     "commit": "cz",
     "eslint-output": "eslint-output",
-    "lint": "eslint \"./**/*.{js,ts}\"",
-    "lint:fix": "yarn lint --fix",
+    "lint": "eslint '**/*.{js,ts}'",
     "lint:output": "yarn run eslint-output --quiet \"**/*.{js,ts}\"",
-    "lint:quiet": "yarn lint --quiet",
     "lint:report": "yarn lint:output",
+    "tdd": "yarn test --watch",
     "test": "yarn test:run",
     "test:dependencies": "depcheck",
-    "test:integration": "NODE_ENV=test nyc --report-dir nyc_coverage_integration ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.it.{ts,js}'",
-    "test:run": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.{unit,it}.{ts,js}'",
-    "test:single": "NODE_ENV=test nyc ts-mocha --paths --opts ./config/tests/mocha.opts",
-    "test:unit": "NODE_ENV=test nyc --report-dir=nyc_coverage_unit ts-mocha --paths --opts ./config/tests/mocha.opts 'tests/**/*.unit.{ts,js}'"
+    "test:integration": "NODE_ENV=test nyc --report-dir nyc_coverage_integration ts-mocha --paths --config ./config/test/.mocharc.yml 'test/**/*.it.ts'",
+    "test:run": "NODE_ENV=test nyc ts-mocha --paths --config ./config/test/.mocharc.yml 'test/**/*.{unit,it}.ts'",
+    "test:single": "NODE_ENV=test ts-mocha --paths --config ./config/test/.mocharc.yml",
+    "test:unit": "NODE_ENV=test nyc --report-dir=nyc_coverage_unit ts-mocha --paths --config ./config/test/.mocharc.yml 'test/**/*.unit.ts'"
   }
 }
