--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.organization=voiceflow
 sonar.projectKey=voiceflow_logger
 sonar.projectName=logger
 sonar.sources=lib
-sonar.tests=tests
+sonar.tests=test
 sonar.eslint.reportPaths=sonar/report.json
 sonar.typescript.tsconfigPath=./tsconfig.json
-sonar.javascript.lcov.reportPaths=nyc_coverage_integration/lcov.info
+sonar.javascript.lcov.reportPaths=nyc_coverage_unit/lcov.info,nyc_coverage_integration/lcov.info
