test: sonar source directory

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=voiceflow
 sonar.projectKey=voiceflow_logger
 sonar.projectName=logger
-sonar.sources=lib
+sonar.sources=src
 sonar.tests=test
 sonar.eslint.reportPaths=sonar/report.json
 sonar.typescript.tsconfigPath=./tsconfig.json
