--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,12 @@ build/
 #Sonar report
 sonar/
 nyc_coverage*
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
